# raylib-space-invaders

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  resources.rc
include/: alien.h  block.h  game.h  laser.h  mysteryship.h  obstacle.h  spaceship.h
src/: alien.cpp  block.cpp  game.cpp  laser.cpp  main.cpp  mysteryship.cpp  obstacle.cpp  spaceship.cpp
